<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/background_light"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@color/darkGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#232323"
                android:minHeight="60dp"
                app:title="Account 1"
                app:titleTextColor="@color/add_payment_dialog_icon_color">

            </android.support.v7.widget.Toolbar>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/sum_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="48dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                app:met_baseColor="@color/colorPrimary"
                android:focusable="auto"
                android:gravity="center"
                android:hint="@string/sum"
                android:inputType="numberSigned|numberDecimal"
                android:minWidth="220dp"
                android:textSize="50sp"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextColor="@color/add_payment_dialog_icon_color"
                app:met_floatingLabelTextSize="20sp"
                app:met_primaryColor="@color/colorPrimary"
                app:met_textColor="@color/add_payment_dialog_icon_color"
                app:met_textColorHint="@android:color/darker_gray"
                app:met_validateOnFocusLost="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/currency_btn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/circle_ripple_selector_common"
                    android:text="$"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/date_btn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/circle_ripple_selector_common"
                    app:srcCompat="@drawable/ic_date" />

                <ImageButton
                    android:id="@+id/category_btn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/circle_ripple_selector_common"
                    app:srcCompat="@drawable/ic_category" />

                <ImageView
                    android:id="@+id/repeat_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:padding="12dp"
                    android:background="@drawable/circle_ripple_selector_common"
                    app:srcCompat="@drawable/ic_timer_white_24dp"
                    android:layout_marginStart="20dp" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/rv_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/choose_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp" />
            </FrameLayout>

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="80dp"
                android:layout_marginStart="80dp"
                android:animateLayoutChanges="true"
                android:background="@drawable/selector_confirm_button"
                android:padding="0dp"
                android:text="@string/confirm"
                android:textSize="16sp" />
        </android.support.design.widget.AppBarLayout>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/transaction_description_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:hint="@string/transaction_desc"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBar"
            app:met_floatingLabelTextSize="16dp" />

        <TextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:alpha="0.0"
            android:text="@string/done"
            android:textColor="@color/black"
            android:textSize="45sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appBar" />


    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>