<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground">

    <com.moneytracker.akscorp.moneytracker.Views.BalanceAmountTextView
        android:id="@+id/amountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1234.56"
        android:textColor="@android:color/black"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.moneytracker.akscorp.moneytracker.Views.BalanceCurrencyTextView
        android:id="@+id/currencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="RUR"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/amountTextView"
        app:layout_constraintStart_toEndOf="@+id/amountTextView" />

</android.support.constraint.ConstraintLayout>